--- a/Sophomore_Sem2_Project5/project5style.css
+++ b/Sophomore_Sem2_Project5/project5style.css
@@ -168,3 +168,12 @@ h1 {
   font-size: 48px;
   margin-bottom: 20px;
 }
+.container {
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
